# Transform_bipedal

./: README.md
Namtransformer/: CMakeLists.txt  Namtransformer.usd  package.xml
Namtransformer/config/: joint_names_Namtransformer.yaml
Namtransformer/launch/: display.launch  gazebo.launch
Namtransformer/meshes/: Bubleft.STL  Bubright.STL  Foeleft.STL  Foeright.STL  Footleft.STL  Footright.STL  Hipleft.STL  Hipright.STL  Kneeleft.STL  Kneeright.STL
Namtransformer/urdf/: Namtransformer.csv  Namtransformer.urdf
Transformer.SLDASM/: CMakeLists.txt  package.xml
Transformer.SLDASM/config/: joint_names_Transformer.SLDASM.yaml
Transformer.SLDASM/launch/: display.launch  gazebo.launch
Transformer.SLDASM/meshes/: Baselink.STL  Bubleft.STL  Bubright.STL  (+6 more)
bipedal_nam/: .gitignore  Makefile  README.md  pyproject.toml
bipedal_nam/config/: default_config.py  test_config.py
bipedal_nam/examples/: emergency_stop.py  find_motors_lerobot.py  interactive_position_reader.py  lerobot_motor_control.py  move_motor8_simple.py  move_motors_home.py  normalize_calibration.py  read_motor_info.py  save_motor_home.py  simple_walk.py  test_conversion.py  test_deg_conversion.py  test_mode.py
bipedal_nam/src/bipedal_robot/: __init__.py  bipedal.py  config.py
bipedal_nam/src/bipedal_robot/balance/: __init__.py  stability.py
bipedal_nam/src/bipedal_robot/motor_control/: __init__.py  gait_controller.py  kinematics.py
bipedal_nam/src/bipedal_robot/sensors/: __init__.py
bipedal_nam/src/bipedal_robot/utils/: __init__.py
bipedal_nam/tests/: test_gait.py  test_kinematics.py
(+2 files in other folders)
