[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bipedal-nam"
version = "0.1.0"
description = "Bipedal robot control system based on LeRobot framework"
readme = "README.md"
license = {text = "Apache License 2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Nam", email = "nam@example.com"},
]

dependencies = [
    "lerobot @ file:///home/nam/Lekiwi_new/lerobot",
    "numpy>=1.20",
    "scipy>=1.7",
    "opencv-python>=4.5",
    "pyyaml>=6.0",
    "draccus>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
